hphp/hack/test/typecheck/lambda/new_map_lambda.php.like_types.exp
File "new_map_lambda.php", line 24, characters 60-65:
Invalid argument (Typing[4110])
File "new_map_lambda.php", line 18, characters 36-41:
Expected ~MyEnum because it is an unenforceable type
File "new_map_lambda.php", line 24, characters 26-31:
But got string because the type of the lambda parameter could not be determined. Please add a type hint to the parameter
File "new_map_lambda.php", line 25, characters 26-31:
Invalid argument (Typing[4110])
File "new_map_lambda.php", line 25, characters 26-31:
Expected MyEnum
File "new_map_lambda.php", line 25, characters 26-31:
But got dynamic because it is an unenforceable type
File "new_map_lambda.php", line 25, characters 25-73:
Invalid argument (Typing[4110])
File "new_map_lambda.php", line 12, characters 5-26:
Expected ~(function(string, string): [unresolved]) because it is an unenforceable type
File "new_map_lambda.php", line 25, characters 25-73:
But got (function(~MyEnum $value, string $name): [unresolved])
